--- a/src/component/Weather.module.css
+++ b/src/component/Weather.module.css
@@ -33,7 +33,7 @@ body {
   padding: 10px;
   margin-bottom: 10px;
   display: inline-block;
-  margin: 0 20px;
+  margin: 20px;
   background-color: #fff;
   width: 180px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
