change the className

--- a/src/component/Weather.css
+++ b/src/component/Weather.css
@@ -28,7 +28,7 @@ body {
   margin-top: 20px;
 }
 
-.weather_card {
+.weather-card {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
